GNOME Bugzilla – Bug 684528
Wrong status message when call is disconnected
Last modified: 2012-09-25 07:42:34 UTC
- Start an audio call - Once it's established hang up - The call status message is "Mute -- 0:15m" It should say that the call has been terminated, not sure what the best phrasing is.
Created attachment 224908 [details] [review] Say in the status message when the call has been terminated This is not a string freeze break as this string is already used in a bunch of place in this file. We could probably improve the phrasing a little bit but that's too late for this cycle.
Comment on attachment 224908 [details] [review] Say in the status message when the call has been terminated reviewed by Sjoerd on IRC. I'll merge it after the hard code freeze.
Will be in 3.6.1 Attachment 224908 [details] pushed as 5bfe573 - Say in the status message when the call has been terminated