Say in the status message when the call has been terminated

This is not a string freeze break as this string is already used in a bunch of
place in this file.

We could probably improve the phrasing a little bit but that's too late for
this cycle.

https://bugzilla.gnome.org/show_bug.cgi?id=684528